<resources>
    <string name="app_name">CareerSync</string>
    <string name="bg_img">bg_img</string>
    <string name="username">Enter username</string>
    <string name="password">enter password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="login">Login</string>
    <string name="heading_top">Top</string>
    <string name="heading_courses">Course</string>
    <string name="lecture">Lectures</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="bookmark">bookmark</string>
    <string name="feed">feed</string>
    <string name="job">job</string>
    <string name="profile">profile</string>
    <string name="Job">Job</string>
    <string name="my_profile">My Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="recent">Recent Jobs</string>
    <string name="popular">Trending</string>
    <string name="applied">Applied Jobs</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">Incorrect Username Or Password</string>
</resources>