<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindJobActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="Hello User"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_notification"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"

        tools:layout_editor_absoluteX="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="150dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/Job"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="21dp"
            tools:listitem="@layout/recycler_view_job"
           >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


    </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_home"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/home" />
            <ImageView
                android:id="@+id/icon_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_search"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/search"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/icon_bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_bookmark"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/bookmark"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/icon_feed"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_play"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/feed"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/icon_job"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_job"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/job"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/icon_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_profile"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/profile"
                android:layout_marginStart="30dp"/>

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>